fix: fix unit tests for sales creation method in SaleServices